<resources>
    <string name="app_name">喜来健</string>
    <string name="loading">加载中</string>
    <string name="sign">签到</string>
    <string name="registered">注册</string>
    <string name="has_not_signed">未签到</string>
    <string name="has_signed">已签到</string>
    <string name="statistics">统计</string>
    <string name="mime">我</string>
    <string name="edit">编辑</string>
    <string name="user_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="guest_name">名字：</string>
    <string name="age">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="phoneNumber">电话号码</string>
    <string name="introducer">介绍的人</string>
    <string name="referee">推荐的人</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;址</string>
    <string name="medical_history">病&#160;&#160;&#160;&#160;&#160;&#160;&#160;史</string>
    <string name="experience_freedback">体验反馈</string>
    <string name="attendance_record">考勤记录</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="upLoad">上传</string>
    <string name="save">保存</string>
    <string name="user_id">用户编号</string>
    <string name="get_user_id">获取用\n户编号</string>
    <string name="please_input_person_id">请输入用户的编码</string>
    <string name="search">搜索</string>
    <string name="title_activity_search">顾客信息</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="nickName">昵称</string>
    <string name="title_activity_sign">SignActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cpac">CpacActivity</string>
    <string name="personal_sign_detail">个人签到情况</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_day_statistic">DayStatisticActivity</string>
    <string name="day_statistic">日统计</string>
    <string name="month_statistic">月统计</string>
    <string name="year_statistic">年统计</string>
    <string name="title_activity_month_statistic">MonthStatisticActivity</string>
    <string name="guest_id">编号：</string>
    <string name="feedback">客户反馈</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="cancel">取消</string>
    <string name="write_comment">写客户反馈</string>
    <string name="save_comment">保存</string>
    <string name="history_comments">历史反馈</string>
    <string name="forget_password">忘记密码</string>
    <string name="exit">退出</string>
    <string name="home_name">乐家健</string>
</resources>
