<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_id" />

                    <TextView
                        android:id="@+id/tv_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/button_bk_orange" />

                    <Button
                        android:id="@+id/btn_user_id"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:background="@drawable/selector_orange_bg"
                        android:text="@string/get_user_id" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <EditText
                        android:id="@+id/edt_user_name"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="45dp"
                        android:background="@drawable/button_bk_orange" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age" />

                    <EditText
                        android:id="@+id/edt_user_age"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/button_bk_orange"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex" />

                   <RadioGroup
                       android:id="@+id/rg_sex"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:orientation="horizontal">

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/rb_male"
                           android:text="@string/male"
                           android:layout_marginRight="30dp"
                           android:checked="true"
                           />
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/rb_female"
                           android:text="@string/female"
                           />
                   </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneNumber" />

                    <EditText
                        android:id="@+id/edt_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/button_bk_orange"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/button_bk_orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introducer" />

                <EditText
                    android:id="@+id/edt_introducer"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="45dp"
                    android:background="@drawable/button_bk_orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_history" />

                <EditText
                    android:id="@+id/edt_medical_history"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/button_bk_orange" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/btn_upload_uer_data"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/selector_orange_bg"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>