<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/edt_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/button_bk_orange"
        android:hint="@string/please_input_account"
        android:layout_margin="30dp"
         />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bk_orange"
        android:hint="@string/please_input_password"
       />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_green_bg"
            android:text="@string/registered"
            android:textSize="20dp"
            android:textColor="@color/white"
            />


    </LinearLayout>






</LinearLayout>
